k8s/production/dummy-node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-node
  namespace: chicmoz
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/auth-url: http://auth.chicmoz.svc.cluster.local
    nginx.ingress.kubernetes.io/auth-response-headers: x-api-key
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: dummy-node
                port:
                  name: http-app
            path: /v1/.+?/(.+)
            pathType: Prefix
status:
  loadBalancer: {}
